[a11y] Fix overlapping  inline code background in headings (#90)

--- a/packages/theme/css/prose.module.css
+++ b/packages/theme/css/prose.module.css
@@ -186,9 +186,11 @@
   background-color: var(--base-color-scale-indigo-0);
 }
 
-/* Inline code inside headings should inherit font-size */
-.Prose :is(h1, h2, h3, h4, h5, h6):has(code) code:not(:global(.custom-component) code) {
+/* Inline code inside headings should inherit font-size and participate in line layout */
+.Prose :is(h1, h2, h3, h4, h5, h6) code:not(:global(.custom-component) code) {
   font-size: inherit;
+  display: inline-block;
+  margin-block: var(--base-size-4);
 }
 
 [data-color-mode='dark'] .Prose code:not(:global(.custom-component) code) {
